tests/ui/impl-trait/impl-fn-parsing-ambiguities.stderr
error: ambiguous `+` in a type
  --> $DIR/impl-fn-parsing-ambiguities.rs:4:27
   |
LL | fn a() -> impl Fn(&u8) -> impl Debug + '_ {
   |                           ^^^^^^^^^^^^^^^ help: use parentheses to disambiguate: `(impl Debug + '_)`

error: ambiguous `+` in a type
  --> $DIR/impl-fn-parsing-ambiguities.rs:11:24
   |
LL | fn b() -> impl Fn() -> impl Debug + Send {
   |                        ^^^^^^^^^^^^^^^^^ help: use parentheses to disambiguate: `(impl Debug + Send)`

error[E0657]: `impl Trait` cannot capture higher-ranked lifetime from outer `impl Trait`
  --> $DIR/impl-fn-parsing-ambiguities.rs:4:40
   |
LL | fn a() -> impl Fn(&u8) -> impl Debug + '_ {
   |                                        ^^
   |
note: lifetime declared here
  --> $DIR/impl-fn-parsing-ambiguities.rs:4:19
   |
LL | fn a() -> impl Fn(&u8) -> impl Debug + '_ {
   |                   ^

error: lifetime may not live long enough
  --> $DIR/impl-fn-parsing-ambiguities.rs:7:9
   |
LL |     |x| x
   |      -- ^ returning this value requires that `'1` must outlive `'2`
   |      ||
   |      |return type of closure is impl Debug + '2
   |      has type `&'1 u8`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0657`.
